--- a/Android/BasicVideoCall/app/src/main/res/values/strings.xml
+++ b/Android/BasicVideoCall/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_call">CallActivity</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_whiteboard">WhiteboardActivity</string>
 
     <!-- Preference Titles -->
     <string name="channel_header">Channel</string>
